--- a/Cours/src/index.html
+++ b/Cours/src/index.html
@@ -7,7 +7,13 @@
     <title>Solar System Dog</title>
 </head>
 <body>
+
+    <div class="container">
+        <div id="title">Solar System Dog</div>
+    </div>
+
     <script type="module" src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
 </body>
 </html>
