Added text when zooming on a planet

--- a/Cours/src/index.html
+++ b/Cours/src/index.html
@@ -11,6 +11,9 @@
       <div id="title">Solar System Dog</div>
     </div>
 
+    <div id="text-container"></div>
+
+
     <canvas class="webgl"></canvas>
 
     <script type="module" src="script.js"></script>
