--- a/Cours/src/index.html
+++ b/Cours/src/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Solar System Dog</title>
-  </head>
-  <body>
-    <div class="container">
-      <div id="title">Solar System Dog</div>
-    </div>
 
-    <div id="text-container"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+  <title>Solar System Dog</title>
+</head>
+
+<body>
+  <div class="container">
+    <div id="title">Solar System</div>
+  </div>
+
+  <div id="text-container"></div>
 
 
-    <canvas class="webgl"></canvas>
+  <canvas class="webgl"></canvas>
 
-    <script type="module" src="script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  </body>
+  <script type="module" src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+</body>
+
 </html>
